--- a/requirements.txt
+++ b/requirements.txt
@@ -1,199 +1,59 @@
-absl-py==2.3.1
-alembic==1.16.5
-anyio==4.10.0
-appnope==0.1.4
-argon2-cffi==25.1.0
-argon2-cffi-bindings==25.1.0
-arrow==1.3.0
-asttokens==3.0.0
-astunparse==1.6.3
-async-lru==2.0.5
-attrs==25.3.0
-babel==2.17.0
-beautifulsoup4==4.13.4
-bleach==6.2.0
+altair==6.0.0
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.1
+attrs==25.4.0
+beautifulsoup4==4.14.3
 blinker==1.9.0
-catboost==1.2.8
-certifi==2025.10.5
-cffi==1.17.1
-charset-normalizer==3.4.2
-choreographer==1.2.1
-click==8.2.1
-cloudpickle==3.1.1
-colorlog==6.9.0
-comm==0.2.2
-contourpy==1.3.2
-curl_cffi==0.11.1
-customtkinter==5.2.2
-cycler==0.12.1
-darkdetect==0.8.0
-dash==3.0.4
-debugpy==1.8.14
-decorator==5.2.1
-defusedxml==0.7.1
-et_xmlfile==2.0.0
-executing==2.2.0
-fastjsonschema==2.21.2
-filelock==3.19.1
-fitter==1.7.1
-Flask==3.0.3
-flatbuffers==25.9.23
-fonttools==4.58.1
-fqdn==1.5.1
-frozendict==2.4.6
-fsspec==2025.7.0
-gast==0.6.0
-google-pasta==0.2.0
-graphviz==0.20.3
-grpcio==1.76.0
+cachetools==6.2.6
+certifi==2026.1.4
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.1
+curl_cffi==0.13.0
+fastapi==0.132.0
+frozendict==2.4.7
+gitdb==4.0.12
+GitPython==3.1.46
 h11==0.16.0
-h5py==3.15.1
-httpcore==1.0.9
-httpx==0.28.1
-idna==3.10
-importlib_metadata==8.7.0
-iniconfig==2.3.0
-ipykernel==6.29.5
-ipython==9.2.0
-ipython_pygments_lexers==1.1.1
-ipywidgets==8.1.7
-isoduration==20.11.0
-itsdangerous==2.2.0
-jedi==0.19.2
+idna==3.11
 Jinja2==3.1.6
-joblib==1.5.1
-json5==0.12.1
-jsonpointer==3.0.0
-jsonschema==4.25.1
-jsonschema-specifications==2025.4.1
-jupyter-events==0.12.0
-jupyter-lsp==2.3.0
-jupyter_client==8.6.3
-jupyter_core==5.8.1
-jupyter_server==2.17.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.4.6
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.15
-kaleido==1.2.0
-keras==3.11.3
-kiwisolver==1.4.8
-lark==1.2.2
-libclang==18.1.1
-lightgbm==4.6.0
-llvmlite==0.44.0
-logistro==2.0.1
-loguru==0.7.3
-lxml==6.0.1
-Mako==1.3.10
-Markdown==3.9
-markdown-it-py==4.0.0
-MarkupSafe==3.0.2
-matplotlib==3.10.3
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mistune==3.1.4
-ml_dtypes==0.5.3
-mpmath==1.3.0
-multitasking==0.0.11
-namex==0.1.0
-narwhals==1.41.0
-nbclient==0.10.2
-nbconvert==7.17.0
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.5
-notebook==7.4.5
-notebook_shim==0.2.4
-numba==0.61.2
-numpy==2.3.4
-openpyxl==3.1.5
-opt_einsum==3.4.0
-optree==0.17.0
-optuna==4.5.0
-orjson==3.11.7
-packaging==25.0
-pandas==2.2.3
-pandas-datareader==0.10.0
-pandas-stubs==2.3.2.250827
-pandocfilters==1.5.1
-parso==0.8.4
-patsy==1.0.1
-peewee==3.18.1
-pexpect==4.9.0
-pillow==11.2.1
-platformdirs==4.3.8
-plotly==6.1.2
-pluggy==1.6.0
-prometheus_client==0.22.1
-prompt_toolkit==3.0.51
-protobuf==6.31.1
-psutil==7.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pycparser==2.22
-Pygments==2.19.1
-pyparsing==3.2.3
-pytest==9.0.2
-pytest-timeout==2.4.0
+jsonschema==4.26.0
+jsonschema-specifications==2025.9.1
+MarkupSafe==3.0.3
+multitasking==0.0.12
+narwhals==2.17.0
+numpy==2.4.2
+packaging==26.0
+pandas==2.3.3
+peewee==4.0.0
+pillow==12.1.1
+platformdirs==4.9.2
+plotly==6.5.2
+protobuf==6.33.5
+pyarrow==23.0.1
+pycparser==3.0
+pydantic==2.12.5
+pydantic_core==2.41.5
+pydeck==0.9.1
 python-dateutil==2.9.0.post0
-python-json-logger==3.3.0
 pytz==2025.2
-PyYAML==6.0.2
-pyzmq==26.4.0
-referencing==0.36.2
-requests==2.32.3
-retrying==1.3.4
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rfc3987-syntax==1.1.0
-rich==14.1.0
-rich-click==1.8.9
-rpds-py==0.27.1
-scikit-learn==1.6.1
-scipy==1.15.3
-scipy-stubs==1.16.1.1
-seaborn==0.13.2
-Send2Trash==1.8.3
-setuptools==80.9.0
-shap==0.47.2
-simplejson==3.20.2
+referencing==0.37.0
+requests==2.32.5
+rpds-py==0.30.0
+scipy==1.17.1
 six==1.17.0
-slicer==0.0.8
-sniffio==1.3.1
-soupsieve==2.7
-SQLAlchemy==2.0.43
-stack-data==0.6.3
-statsmodels==0.14.4
-sympy==1.14.0
-ta==0.11.0
-tensorboard==2.20.0
-tensorboard-data-server==0.7.2
-termcolor==3.1.0
-terminado==0.18.1
-threadpoolctl==3.6.0
-tinycss2==1.4.0
-torch==2.8.0
-tornado==6.5.1
-tqdm==4.67.1
-traitlets==5.14.3
-ttkbootstrap==1.15.0
-types-python-dateutil==2.9.0.20250822
-typing_extensions==4.13.2
-tzdata==2025.2
-uri-template==1.3.0
-urllib3==2.4.0
-vartools==1.1.0
-wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==15.0.1
-Werkzeug==3.0.6
-wheel==0.45.1
-widgetsnbextension==4.0.14
-wrapt==2.0.0
-xgboost==3.0.2
-yfinance==0.2.61
-zipp==3.22.0
+smmap==5.0.2
+soupsieve==2.8.3
+starlette==0.52.1
+streamlit==1.54.0
+tenacity==9.1.4
+toml==0.10.2
+tornado==6.5.4
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.3
+urllib3==2.6.3
+uvicorn==0.41.0
+websockets==16.0
+yfinance==1.2.0
